--- a/stock/study/crawling_basic_examples.ipynb
+++ b/stock/study/crawling_basic_examples.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,6 +43,7 @@
       },
       "outputs": [],
       "source": [
+        "# 구글 request 요청\n",
         "import requests\n",
         "\n",
         "url = 'https://www.google.com/'\n",
@@ -53,6 +53,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# 상태코드 확인\n",
         "reponse.status_code"
       ],
       "metadata": {
@@ -64,6 +65,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# html 구조 확인하기\n",
         "reponse.text"
       ],
       "metadata": {
@@ -84,7 +86,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#https://search.naver.com/search.naver?query=데이터분석\n",
+        "#NAVER 블로그 '단풍여행' 검색\n",
         "url = 'https://search.naver.com/search.naver?ssc=tab.blog.all&sm=tab_jum&query=%EB%8B%A8%ED%92%8D%EC%97%AC%ED%96%89'\n",
         "response = requests.get(url)\n",
         "\n",
@@ -144,6 +146,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# 반복문으로 블로그 제목 스크랩\n",
         "for t in titles :\n",
         "  print(t.text)"
       ],
@@ -164,15 +167,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "GUwwk1C5l7oZ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "url = 'https://www.google.com/images/branding/googlelogo/1x/googlelogo_light_color_272x92dp.png'\n",
         "\n",
@@ -187,6 +181,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# 상태 코드 확인\n",
         "response.status_code"
       ],
       "metadata": {
@@ -354,7 +349,8 @@
     {
       "cell_type": "code",
       "source": [
-        "post_list = soup.find_all('div', {'class': \"post-preview\"})"
+        "post_list = soup.find_all('div', {'class': \"post-preview\"})\n",
+        "post_list"
       ],
       "metadata": {
         "id": "oiD7OdSDm1fP"
@@ -410,15 +406,38 @@
       "source": [
         "from bs4 import BeautifulSoup\n",
         "import requests\n",
+        "import pandas as pd\n",
         "\n",
+        "# 스크랩할 신문 기사 request 요청\n",
         "url = 'https://n.news.naver.com/mnews/article/015/0005001712'\n",
         "response = requests.get(url)\n",
+        "\n",
+        "# 파싱\n",
         "soup = BeautifulSoup(response.text, 'lxml')\n",
+        "\n",
+        "# 기사 제목, 게시일, 기사명 스크랩\n",
+        "title = soup.find('h2', {'class' : 'media_end_head_headline'}).text.strip()\n",
+        "date = soup.find('span', {'class' : 'media_end_head_info_datestamp_time _ARTICLE_DATE_TIME'}).text.strip()\n",
+        "journalist = soup.find('em',{'class' : 'media_end_head_journalist_name'}).text.strip()\n",
+        "\n",
+        "# 데이터프레임 생성\n",
+        "df = pd.DataFrame({'title' : title, 'date' : date, 'journalist' : journalist}, index=[0])\n",
+        "df"
+      ],
+      "metadata": {
+        "id": "7Mru60lUpVrU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#본문 확인\n",
         "soup.find('div', {'class': 'newsct_article _article_body'}).text"
       ],
       "metadata": {
-        "id": "3GKjT5MihOIX",
-        "collapsed": true
+        "id": "55oM4h9CoOOe"
       },
       "execution_count": null,
       "outputs": []
@@ -427,7 +446,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "7Mru60lUpVrU"
+        "id": "cmPqAQpy_aEG"
       },
       "execution_count": null,
       "outputs": []
