--- a/stock/study/crawling_basic_examples.ipynb
+++ b/stock/study/crawling_basic_examples.ipynb
@@ -54,6 +54,7 @@
       "cell_type": "code",
       "source": [
         "# 상태코드 확인\n",
+        "# {200 : 성공 , 403 : Forbidden , 404 : Not Found}\n",
         "reponse.status_code"
       ],
       "metadata": {
