Colab을 통해 생성됨

--- a/OpenDartReader_Financial_Data_Extraction_.ipynb
+++ b/OpenDartReader_Financial_Data_Extraction_.ipynb
@@ -75,7 +75,7 @@
         "import OpenDartReader\n",
         "\n",
         "# API key 지정\n",
-        "my_api = \"2c2d0392ec39d1f4f2a063aca65c8a52d8ba56c2\"\n",
+        "my_api = \"my_api\"\n",
         "\n",
         "# OpenDartReader 객체 생성하기\n",
         "dart = OpenDartReader(my_api)"
@@ -394,7 +394,7 @@
         "import OpenDartReader\n",
         "\n",
         "# API key 지정\n",
-        "my_api = \"2c2d0392ec39d1f4f2a063aca65c8a52d8ba56c2\"\n",
+        "my_api = \"my_api\"\n",
         "\n",
         "# OpenDartReader 객체 생성하기\n",
         "dart = OpenDartReader(my_api)"
@@ -592,6 +592,15 @@
       ],
       "metadata": {
         "id": "X94uHArrCGmu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "x7vMWasVSp-U"
       },
       "execution_count": null,
       "outputs": []
